testing changes for embedded icons in DLLs and EXEs
o added convert from stdpic to 32bpp
o embedded icon will display in map and targetPicBox using DrawIcon
o added icoWriter.cls to test extraction and writing of ICO/PNG with alpha
o added picSave.cls to save an embedded icon to a PNG without alpha

--- a/PicSave.cls
+++ b/PicSave.cls
@@ -11,6 +11,13 @@ Attribute VB_GlobalNameSpace = False
 Attribute VB_Creatable = True
 Attribute VB_PredeclaredId = True
 Attribute VB_Exposed = False
+'---------------------------------------------------------------------------------------
+' Module    : PicSave
+' Author    : Dilletante
+' Date      : 19/04/2025
+' Purpose   :
+'---------------------------------------------------------------------------------------
+
 Option Explicit
 '
 '=======
@@ -161,7 +168,7 @@ Dim fmtGIF, fmtJPEG, fmtPNG
 
 '---------------------------------------------------------------------------------------
 ' Procedure : SavePicture
-' Author    : beededea
+' Author    : Dilletante
 ' Date      : 04/04/2025
 ' Purpose   :
 '---------------------------------------------------------------------------------------
